happy_ws/log/build_2025-08-25_19-30-44/service/stderr.log
  File "/home/st/sample/happy_ws/install/service/lib/python3.10/site-packages/service/server.py", line 21
    self.get_loger().info(f{self.num_data})
                          ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

